@@ -39,6 +39,8 @@ MIDIboxSEQ V4.095
 
    o OPTIONS page: new option "Swap LED colours" (relevant for Wilba and midiphy Frontpanels)
 
+   o OPTIONS page: new option "Invert Mute LEDs"
+
    o AOUT: MIDI Channel 9..12/13..15 now set the gate pins #1/3/5/7 as documented (previously it was #1/2/3/4 due to a code translation error)
      New: gate pins #2/4/6/8 are now set whenever the velocity is >100.
      This way the pins can be used as an accent trigger
